<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
    android:background="#cb259bc6"
    android:id="@+id/background">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCreateGame"
        android:id="@+id/btnCreateGame"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:background="#ff570009"
        android:textColor="#Ffffffff"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnJoinGame"
        android:id="@+id/btnJoinGame"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#ff570009"
        android:textColor="#Ffffffff"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnShowRules"
        android:id="@+id/btnShowRules"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:background="#ff570009"
        android:textColor="#Ffffffff"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Tolles Kartenspiel"
        android:id="@+id/txtVwCardName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:textColor="#ff570009"
        android:textSize="30dp"
        android:textStyle="bold" />

</RelativeLayout>
