<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bremen_hs.de.jojoni.RuleFragment"
    android:background="@drawable/background_menu">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtVwRules1"
                android:text="@string/seka_rules_header"
                android:layout_marginTop="20sp"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_1"
                android:id="@+id/txtVwRules2"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_2"
                android:id="@+id/txtVwRules3"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_3"
                android:id="@+id/txtVwRules4"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_4"
                android:id="@+id/txtVwRules5"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_5"
                android:id="@+id/txtVwRules6"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_6"
                android:id="@+id/txtVwRules7"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_7"
                android:id="@+id/txtVwRules8"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_8"
                android:id="@+id/txtVwRules9"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_9.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules10"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_9.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules11"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_10.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules12"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_10.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules13"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_11.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules14"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_11.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules15"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_12.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules16"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_12.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules17"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_13.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules18"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_13.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules19"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_14.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules20"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_14.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules21"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_15.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules22"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_15.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules23"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_16.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules24"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_16.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules25"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_17.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules26"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_17.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules27"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_18.1"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules28"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seka_rules_18.2"
                    android:layout_weight="0.5"
                    android:id="@+id/txtVwRules29"
                    android:textColor="#ffffff" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_19"
                android:id="@+id/txtVwRules30"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_20"
                android:id="@+id/txtVwRules31"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_21"
                android:id="@+id/txtVwRules32"
                android:textColor="#ffffff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seka_rules_22"
                android:id="@+id/txtVwRules33"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
